--- a/personalWebsite_2.html
+++ b/personalWebsite_2.html
@@ -4,9 +4,9 @@
       <title>Bootstrap Example</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+      <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+      <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
       <link rel = "stylesheet" href = "style.css">
       <script>
          $( document ).ready(function() {
@@ -52,7 +52,7 @@
          <div id="cnavb" class="text-center col-xs-12">
             <!-- <div class="btn-group"> -->
             </br>
-            <a href="#introCenter" class="btn btn-small ">About Me</a>
+            <a href="" class="btn btn-small ">About Me</a>
             <a href="" class="btn btn-small ">Experience</a>
             <a href="" class="btn btn-small ">Portfolio</a>
             <a href="" class="btn btn-small ">Contact Me</a>
